# baxter_moveit

./: CMakeLists.txt  README.md  package.xml
launch/: motion_planning_api_tutorial_baxter.launch  move_group_interface_tutorial_baxter.launch
src/: baxter_moveit_test.cpp  move_group_interface_tutorial_baxter.cpp
